--- a/css/bbf-style.css
+++ b/css/bbf-style.css
@@ -63,14 +63,14 @@ html {
 /* line 67, ../sass/bbf-style.scss */
 body {
   line-height: 1.5;
-  color: #999;
+  color: #999999;
   height: 100%;
   background: #181a1d;
   -webkit-overflow-scrolling: touch; }
 
 /* line 75, ../sass/bbf-style.scss */
 a {
-  color: #999;
+  color: #999999;
   text-decoration: none; }
 
 /* line 80, ../sass/bbf-style.scss */
@@ -219,7 +219,7 @@ li {
   height: 40px;
   line-height: 40px;
   font-size: 1.4em;
-  color: #dcdcdc;
+  color: gainsboro;
   text-indent: 20px;
   background: url(../img/btn-down.png) center center no-repeat;
   background-size: 5%; }
@@ -317,7 +317,7 @@ li {
 /* line 312, ../sass/bbf-style.scss */
 .read-more {
   margin-bottom: 20px;
-  color: #dcdcdc;
+  color: gainsboro;
   cursor: pointer;
   display: block; }
 
@@ -352,7 +352,7 @@ li {
   /* line 342, ../sass/bbf-style.scss */
   .pay-select-number-wrap p {
     margin-bottom: 15px;
-    color: #666;
+    color: #666666;
     font-size: 1.4em; }
 
 /* line 348, ../sass/bbf-style.scss */
@@ -390,7 +390,7 @@ li {
     line-height: 39px;
     text-align: center;
     font-size: 3em;
-    color: #dcdcdc;
+    color: gainsboro;
     background: #292a2c; }
   /* line 382, ../sass/bbf-style.scss */
   .count .addition {
@@ -425,7 +425,7 @@ li {
   line-height: 76px;
   font-size: 8.2em;
   color: #ffffff;
-  background: #000 url(../img/number-bg.png) 0 0 repeat-x;
+  background: black url(../img/number-bg.png) 0 0 repeat-x;
   background-size: 50%;
   letter-spacing: 7px; }
   /* line 416, ../sass/bbf-style.scss */
@@ -445,7 +445,7 @@ li {
   text-align: center;
   font-size: 3em;
   font-weight: bold;
-  color: #666; }
+  color: #666666; }
 
 /* line 434, ../sass/bbf-style.scss */
 .select-wrap {
@@ -459,7 +459,7 @@ li {
     height: 40px;
     font-size: 1.4em;
     text-indent: 1em;
-    color: #999;
+    color: #999999;
     background: transparent;
     border: 0;
     border-radius: 0;
@@ -680,7 +680,7 @@ li {
   .app-info2-btns .info2-right-btn {
     margin-top: 18px;
     width: 44.6875%;
-    height: 36px;
+    height: 40px;
     font-size: 1.5em; }
   /* line 666, ../sass/bbf-style.scss */
   .app-info2-btns .info2-left-btn {
@@ -839,12 +839,12 @@ input[type="checkbox"] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  background: url('../img/unchecked.png?1413853053') 0 0 no-repeat;
+  background: url('../img/unchecked.png?1413718508') 0 0 no-repeat;
   background-size: 100%; }
 
 /* line 817, ../sass/bbf-style.scss */
 input[type="checkbox"]:checked {
-  background: url('../img/checked.png?1413853053') 0 0 no-repeat;
+  background: url('../img/checked.png?1413718507') 0 0 no-repeat;
   -webkit-background-size: 100%;
   background-size: 100%; }
 
@@ -909,18 +909,18 @@ input[type="checkbox"]:checked {
       height: 72px;
       display: block;
       color: #b9b9b9;
-      font-size: 13px; }
+      font-size: 1.4em; }
     /* line 879, ../sass/bbf-style.scss */
     .menu-list li:nth-of-type(1) {
-      background: url('../img/logo-1.png?1413853053') 15px 50% no-repeat;
+      background: url('../img/logo-1.png?1413718507') 15px 50% no-repeat;
       background-size: 10%; }
     /* line 883, ../sass/bbf-style.scss */
     .menu-list li:nth-of-type(2) {
-      background: url('../img/logo-2.png?1413853053') 15px 50% no-repeat;
+      background: url('../img/logo-2.png?1413718507') 15px 50% no-repeat;
       background-size: 10%; }
     /* line 887, ../sass/bbf-style.scss */
     .menu-list li:nth-of-type(3) {
-      background: url('../img/logo-3.png?1413853053') 15px 50% no-repeat;
+      background: url('../img/logo-3.png?1413718507') 15px 50% no-repeat;
       background-size: 10%; }
 
 /* line 893, ../sass/bbf-style.scss */
@@ -952,7 +952,7 @@ input[type="checkbox"]:checked {
     font-size: 1.4em; }
   /* line 919, ../sass/bbf-style.scss */
   .logistics-info-wrap time {
-    color: #999;
+    color: #999999;
     display: block; }
 
 /* line 924, ../sass/bbf-style.scss */
@@ -985,7 +985,7 @@ input[type="checkbox"]:checked {
   /* line 949, ../sass/bbf-style.scss */
   .gift-item p {
     margin-top: 8px;
-    color: #999;
+    color: #999999;
     font-size: 1.3em; }
   /* line 955, ../sass/bbf-style.scss */
   .gift-item .right-logo {
@@ -994,7 +994,7 @@ input[type="checkbox"]:checked {
     top: 72px;
     width: 10px;
     height: 16px;
-    background: url('../img/right-logo.png?1413853053') 0 0 no-repeat;
+    background: url('../img/right-logo.png?1413718507') 0 0 no-repeat;
     background-size: 100%; }
 
 /* line 966, ../sass/bbf-style.scss */
@@ -1117,7 +1117,7 @@ input[type="checkbox"]:checked {
 
 /* line 1084, ../sass/bbf-style.scss */
 .yes {
-  background: #000 url('../img/checked.png?1413853053') 90% 50% no-repeat;
+  background: black url('../img/checked.png?1413718507') 90% 50% no-repeat;
   background-size: 8%; }
 
 /* line 1088, ../sass/bbf-style.scss */
@@ -1158,14 +1158,18 @@ input[type="checkbox"]:checked {
     color: #ffffff;
     font-size: 1.4em;
     text-indent: 1em;
-    background: #622a41 url('../img/right-logo.png?1413853053') 90% 50% no-repeat;
+    background: #622a41 url('../img/right-logo.png?1413718507') 90% 50% no-repeat;
     background-size: 5%; }
 
 /* line 1128, ../sass/bbf-style.scss */
 .register-two-btn {
   margin-top: 0; }
+  /* line 1130, ../sass/bbf-style.scss */
+  .register-two-btn .info2-left-btn,
+  .register-two-btn .info2-right-btn {
+    margin-top: 38px; }
 
-/* line 1131, ../sass/bbf-style.scss */
+/* line 1135, ../sass/bbf-style.scss */
 .address-succeed {
   height: 132px;
   line-height: 180px;
@@ -1173,41 +1177,53 @@ input[type="checkbox"]:checked {
   color: #ffffff;
   font-size: 2.1em;
   border-bottom: 1px solid #3c3d40;
-  background: url('../img/red-logo.png?1413853053') 5px 14% no-repeat;
+  background: url('../img/red-logo.png?1413718507') 5px 14% no-repeat;
   background-size: 40%; }
 
-/* line 1141, ../sass/bbf-style.scss */
+/* line 1145, ../sass/bbf-style.scss */
 .app-info-list2 {
   margin-top: 30px; }
-  /* line 1144, ../sass/bbf-style.scss */
+  /* line 1148, ../sass/bbf-style.scss */
   .app-info-list2 li:nth-of-type(1) {
     width: 60%; }
-  /* line 1147, ../sass/bbf-style.scss */
+  /* line 1151, ../sass/bbf-style.scss */
   .app-info-list2 li:nth-of-type(2) {
     width: 90%; }
-  /* line 1150, ../sass/bbf-style.scss */
+  /* line 1154, ../sass/bbf-style.scss */
   .app-info-list2 li:nth-of-type(3) {
     width: 95%; }
-  /* line 1153, ../sass/bbf-style.scss */
+  /* line 1157, ../sass/bbf-style.scss */
   .app-info-list2 li:nth-of-type(4) {
     width: 100%; }
 
-/* line 1158, ../sass/bbf-style.scss */
+/* line 1162, ../sass/bbf-style.scss */
 .succeed-get-present {
   padding: 30px 0;
   margin-top: -180px; }
-  /* line 1161, ../sass/bbf-style.scss */
+  /* line 1165, ../sass/bbf-style.scss */
   .succeed-get-present p {
     margin-bottom: 0; }
-  /* line 1164, ../sass/bbf-style.scss */
+  /* line 1168, ../sass/bbf-style.scss */
   .succeed-get-present .succeed-friend-btn2 {
     margin-top: 60px;
     width: 50%; }
 
-/* line 1169, ../sass/bbf-style.scss */
+/* line 1173, ../sass/bbf-style.scss */
 .bag-pic {
   margin: 0 auto;
   width: 110px;
   height: 144px; }
 
-/*# sourceMappingURL=bbf-style.css.map */
+/* line 1181, ../sass/bbf-style.scss */
+input::-webkit-input-placeholder {
+  color: #525357; }
+
+/* line 1184, ../sass/bbf-style.scss */
+input:-moz-placeholder {
+  color: #525357; }
+
+/* line 1187, ../sass/bbf-style.scss */
+.mgt60 {
+  margin-top: 50px; }
+
+/*@ sourceMappingURL=bbf-style.css.map */
