--- a/css/bbf-style.css
+++ b/css/bbf-style.css
@@ -1102,7 +1102,7 @@ input[type="checkbox"]:checked {
   border-bottom: 1px solid #3c3d40;
   height: 130px;
   line-height: 130px;
-  font-size: 2em;
+  font-size: 2.2em;
   color: #ffffff; }
   /* line 1160, ../sass/bbf-style.scss */
   .register-tt span {
@@ -1266,7 +1266,7 @@ input:-moz-placeholder {
 
 /* line 1329, ../sass/bbf-style.scss */
 .my-fund-none-wrap h1 {
-  padding-top: 135px;
+  padding-top: 73px;
   text-align: center;
   font-size: 2.4em;
   color: #ffffff; }
@@ -1284,16 +1284,13 @@ input:-moz-placeholder {
   font-size: 1.6em;
   display: block; }
 
-/* line 1350, ../sass/bbf-style.scss */
-.my-fund-list-wrap {
-  padding-top: 62px; }
-  /* line 1353, ../sass/bbf-style.scss */
-  .my-fund-list-wrap h2 {
-    padding: 30px 0;
-    font-size: 2.2em;
-    border-bottom: 1px solid #3c3d40;
-    color: #ffffff;
-    text-indent: 4px; }
+/* line 1353, ../sass/bbf-style.scss */
+.my-fund-list-wrap h2 {
+  padding: 30px 0;
+  font-size: 2.2em;
+  border-bottom: 1px solid #3c3d40;
+  color: #ffffff;
+  text-indent: 4px; }
 
 /* line 1361, ../sass/bbf-style.scss */
 .my-fund-list {
@@ -1317,66 +1314,60 @@ input:-moz-placeholder {
   width: 100%;
   overflow: hidden; }
 
-/* line 1382, ../sass/bbf-style.scss */
-.my-fund-list2 {
-  padding: 60px 0; }
-  /* line 1384, ../sass/bbf-style.scss */
-  .my-fund-list2 li {
-    position: relative;
-    padding: 48px 5% 16px;
-    border-bottom: 1px solid #3c3d40;
+/* line 1384, ../sass/bbf-style.scss */
+.my-fund-list2 li {
+  position: relative;
+  padding: 48px 5% 16px;
+  border-bottom: 1px solid #3c3d40;
+  overflow: hidden; }
+  /* line 1389, ../sass/bbf-style.scss */
+  .my-fund-list2 li h2 {
+    font-size: 1.4em;
+    color: #ffffff; }
+  /* line 1393, ../sass/bbf-style.scss */
+  .my-fund-list2 li em {
+    font-size: 1.4em;
+    color: #525357; }
+  /* line 1397, ../sass/bbf-style.scss */
+  .my-fund-list2 li i {
+    position: absolute;
+    right: 0;
+    top: 40px;
+    width: 30%;
+    font-size: 3em;
+    color: #ffffff; }
+  /* line 1405, ../sass/bbf-style.scss */
+  .my-fund-list2 li .my-fund-btns {
+    margin-top: 40px;
     overflow: hidden; }
-    /* line 1389, ../sass/bbf-style.scss */
-    .my-fund-list2 li h2 {
-      font-size: 1.4em;
-      color: #ffffff; }
-    /* line 1393, ../sass/bbf-style.scss */
-    .my-fund-list2 li em {
-      font-size: 1.4em;
+    /* line 1408, ../sass/bbf-style.scss */
+    .my-fund-list2 li .my-fund-btns .my-fund-btn-left,
+    .my-fund-list2 li .my-fund-btns .my-fund-btn-right {
+      float: right;
+      margin-left: 15px;
+      height: 30px;
+      width: 32.5%; }
+    /* line 1416, ../sass/bbf-style.scss */
+    .my-fund-list2 li .my-fund-btns .my-fund-btn-left {
+      border-color: #525357;
       color: #525357; }
-    /* line 1397, ../sass/bbf-style.scss */
-    .my-fund-list2 li i {
-      position: absolute;
-      right: 0;
-      top: 40px;
-      width: 30%;
-      font-size: 3em;
-      color: #ffffff; }
-    /* line 1405, ../sass/bbf-style.scss */
-    .my-fund-list2 li .my-fund-btns {
-      margin-top: 40px;
-      overflow: hidden; }
-      /* line 1408, ../sass/bbf-style.scss */
-      .my-fund-list2 li .my-fund-btns .my-fund-btn-left,
-      .my-fund-list2 li .my-fund-btns .my-fund-btn-right {
-        float: right;
-        margin-left: 15px;
-        height: 30px;
-        width: 32.5%; }
-      /* line 1416, ../sass/bbf-style.scss */
-      .my-fund-list2 li .my-fund-btns .my-fund-btn-left {
-        border-color: #525357;
-        color: #525357; }
 
 /* line 1424, ../sass/bbf-style.scss */
 .gift-number-none {
   opacity: .15; }
 
-/* line 1428, ../sass/bbf-style.scss */
-.invete-friends-wrap {
-  padding-top: 64px; }
-  /* line 1431, ../sass/bbf-style.scss */
-  .invete-friends-wrap h1 {
-    border-bottom: 1px solid #3c3d40;
-    height: 78px;
-    line-height: 78px;
-    font-size: 1.4em;
-    text-indent: 1em; }
-    /* line 1437, ../sass/bbf-style.scss */
-    .invete-friends-wrap h1 b {
-      padding-left: 12px;
-      font-size: 2.143em;
-      color: #ffffff; }
+/* line 1431, ../sass/bbf-style.scss */
+.invete-friends-wrap h1 {
+  border-bottom: 1px solid #3c3d40;
+  height: 78px;
+  line-height: 78px;
+  font-size: 1.4em;
+  text-indent: 1em; }
+  /* line 1437, ../sass/bbf-style.scss */
+  .invete-friends-wrap h1 b {
+    padding-left: 12px;
+    font-size: 2.143em;
+    color: #ffffff; }
 
 /* line 1444, ../sass/bbf-style.scss */
 .invete-friends-tt {
@@ -1420,7 +1411,7 @@ input:-moz-placeholder {
 
 /* line 1486, ../sass/bbf-style.scss */
 .discount-info-tt {
-  padding-top: 60px;
+  padding-top: 20px;
   padding-bottom: 14px;
   border-bottom: 1px solid #3c3d40; }
   /* line 1490, ../sass/bbf-style.scss */
@@ -1457,31 +1448,32 @@ input:-moz-placeholder {
 
 /* line 1522, ../sass/bbf-style.scss */
 .register5 {
+  padding-bottom: 60px;
   margin-top: 32px; }
-  /* line 1524, ../sass/bbf-style.scss */
+  /* line 1525, ../sass/bbf-style.scss */
   .register5 .register-input {
     margin: 12px 0; }
-  /* line 1527, ../sass/bbf-style.scss */
+  /* line 1528, ../sass/bbf-style.scss */
   .register5 .register-phone-btn {
     margin-top: 32px; }
 
-/* line 1531, ../sass/bbf-style.scss */
+/* line 1532, ../sass/bbf-style.scss */
 .zhekoujkia {
   padding-left: 10px;
   color: #ffffff; }
 
-/* line 1537, ../sass/bbf-style.scss */
+/* line 1538, ../sass/bbf-style.scss */
 .pay-final .count {
   width: 77%; }
-/* line 1540, ../sass/bbf-style.scss */
+/* line 1541, ../sass/bbf-style.scss */
 .pay-final .count-left {
   width: 100%; }
-/* line 1543, ../sass/bbf-style.scss */
+/* line 1544, ../sass/bbf-style.scss */
 .pay-final .count-left-item-number {
   float: right;
   margin: 0; }
 
-/* line 1548, ../sass/bbf-style.scss */
+/* line 1549, ../sass/bbf-style.scss */
 .login-pic {
   margin-left: 28px; }
 
