--- a/sass/bbf-style.scss
+++ b/sass/bbf-style.scss
@@ -1155,7 +1155,7 @@ input[type="checkbox"]:checked {
   border-bottom: 1px solid $bds;
   height: 130px;
   line-height: 130px;
-  font-size: 2em;
+  font-size: 2.2em;
   color: #ffffff;
   span {
     margin: 0 3px 0 5px;
@@ -1327,7 +1327,7 @@ input:-moz-placeholder {
 .my-fund-none-wrap {
   @extend %wrap;
   h1 {
-    padding-top: 135px;
+    padding-top: 73px;
     text-align: center;
     font-size: 2.4em;
     color: #ffffff;
@@ -1348,7 +1348,7 @@ input:-moz-placeholder {
   }
 }
 .my-fund-list-wrap{
-  padding-top: 62px;
+  //padding-top: 62px;
   @extend %wrap;
   h2{
     padding: 30px 0;
@@ -1380,7 +1380,7 @@ input:-moz-placeholder {
 }
 
 .my-fund-list2{
-  padding: 60px 0;
+  //padding: 60px 0;
   li{
     position: relative;
     padding: 48px 5% 16px;
@@ -1426,7 +1426,7 @@ input:-moz-placeholder {
 }
 
 .invete-friends-wrap{
-  padding-top: 64px;
+  //padding-top: 64px;
   @extend %wrap;
   h1{
     border-bottom: 1px solid $bds;
@@ -1484,7 +1484,7 @@ input:-moz-placeholder {
   @extend %wrap;
 }
 .discount-info-tt{
-  padding-top: 60px;
+  padding-top: 20px;
   padding-bottom: 14px;
   border-bottom: 1px solid $bds;
   p{
@@ -1520,6 +1520,7 @@ input:-moz-placeholder {
 }
 
 .register5{
+  padding-bottom: 60px;
   margin-top: 32px;
   .register-input{
     margin: 12px 0;
