--- a/css/bbf-style.css
+++ b/css/bbf-style.css
@@ -1286,49 +1286,50 @@ input:-moz-placeholder {
 
 /* line 1353, ../sass/bbf-style.scss */
 .my-fund-list-wrap h2 {
-  padding: 30px 0;
+  height: 82px;
+  line-height: 82px;
   font-size: 2.2em;
   border-bottom: 1px solid #3c3d40;
   color: #ffffff;
   text-indent: 4px; }
 
-/* line 1361, ../sass/bbf-style.scss */
+/* line 1362, ../sass/bbf-style.scss */
 .my-fund-list {
   padding: 28px 0; }
-  /* line 1363, ../sass/bbf-style.scss */
+  /* line 1364, ../sass/bbf-style.scss */
   .my-fund-list li {
     margin-bottom: 23px;
     font-size: 1.4em; }
-    /* line 1366, ../sass/bbf-style.scss */
+    /* line 1367, ../sass/bbf-style.scss */
     .my-fund-list li time {
       color: #525357; }
-    /* line 1369, ../sass/bbf-style.scss */
+    /* line 1370, ../sass/bbf-style.scss */
     .my-fund-list li p {
       color: #ffffff; }
-    /* line 1372, ../sass/bbf-style.scss */
+    /* line 1373, ../sass/bbf-style.scss */
     .my-fund-list li i {
       color: #ed4985; }
 
-/* line 1377, ../sass/bbf-style.scss */
+/* line 1378, ../sass/bbf-style.scss */
 .my-fund-wrap {
   width: 100%;
   overflow: hidden; }
 
-/* line 1384, ../sass/bbf-style.scss */
+/* line 1385, ../sass/bbf-style.scss */
 .my-fund-list2 li {
   position: relative;
-  padding: 48px 5% 16px;
+  padding: 44px 5% 16px;
   border-bottom: 1px solid #3c3d40;
   overflow: hidden; }
-  /* line 1389, ../sass/bbf-style.scss */
+  /* line 1390, ../sass/bbf-style.scss */
   .my-fund-list2 li h2 {
     font-size: 1.4em;
     color: #ffffff; }
-  /* line 1393, ../sass/bbf-style.scss */
+  /* line 1394, ../sass/bbf-style.scss */
   .my-fund-list2 li em {
     font-size: 1.4em;
     color: #525357; }
-  /* line 1397, ../sass/bbf-style.scss */
+  /* line 1398, ../sass/bbf-style.scss */
   .my-fund-list2 li i {
     position: absolute;
     right: 0;
@@ -1336,40 +1337,40 @@ input:-moz-placeholder {
     width: 30%;
     font-size: 3em;
     color: #ffffff; }
-  /* line 1405, ../sass/bbf-style.scss */
+  /* line 1406, ../sass/bbf-style.scss */
   .my-fund-list2 li .my-fund-btns {
     margin-top: 40px;
     overflow: hidden; }
-    /* line 1408, ../sass/bbf-style.scss */
+    /* line 1409, ../sass/bbf-style.scss */
     .my-fund-list2 li .my-fund-btns .my-fund-btn-left,
     .my-fund-list2 li .my-fund-btns .my-fund-btn-right {
       float: right;
       margin-left: 15px;
       height: 30px;
       width: 32.5%; }
-    /* line 1416, ../sass/bbf-style.scss */
+    /* line 1417, ../sass/bbf-style.scss */
     .my-fund-list2 li .my-fund-btns .my-fund-btn-left {
       border-color: #525357;
       color: #525357; }
 
-/* line 1424, ../sass/bbf-style.scss */
+/* line 1425, ../sass/bbf-style.scss */
 .gift-number-none {
   opacity: .15; }
 
-/* line 1431, ../sass/bbf-style.scss */
+/* line 1432, ../sass/bbf-style.scss */
 .invete-friends-wrap h1 {
   border-bottom: 1px solid #3c3d40;
   height: 78px;
   line-height: 78px;
   font-size: 1.4em;
   text-indent: 1em; }
-  /* line 1437, ../sass/bbf-style.scss */
+  /* line 1438, ../sass/bbf-style.scss */
   .invete-friends-wrap h1 b {
     padding-left: 12px;
     font-size: 2.143em;
     color: #ffffff; }
 
-/* line 1444, ../sass/bbf-style.scss */
+/* line 1445, ../sass/bbf-style.scss */
 .invete-friends-tt {
   margin-top: 24px;
   width: 80%;
@@ -1379,7 +1380,7 @@ input:-moz-placeholder {
   background: #622a41;
   text-indent: 1em; }
 
-/* line 1453, ../sass/bbf-style.scss */
+/* line 1454, ../sass/bbf-style.scss */
 .invete-friends-con {
   margin-top: 28px;
   padding: 20px;
@@ -1388,7 +1389,7 @@ input:-moz-placeholder {
   font-size: 1.4em;
   color: #000;
   border: 2px solid #464646; }
-  /* line 1461, ../sass/bbf-style.scss */
+  /* line 1462, ../sass/bbf-style.scss */
   .invete-friends-con:before {
     content: "";
     position: absolute;
@@ -1398,7 +1399,7 @@ input:-moz-placeholder {
     height: 0;
     border: 12px solid transparent;
     border-bottom: 12px solid #464646; }
-  /* line 1471, ../sass/bbf-style.scss */
+  /* line 1472, ../sass/bbf-style.scss */
   .invete-friends-con:after {
     content: "";
     position: absolute;
@@ -1409,21 +1410,21 @@ input:-moz-placeholder {
     border: 12px solid transparent;
     border-bottom: 12px solid #fff; }
 
-/* line 1486, ../sass/bbf-style.scss */
+/* line 1487, ../sass/bbf-style.scss */
 .discount-info-tt {
   padding-top: 20px;
   padding-bottom: 14px;
   border-bottom: 1px solid #3c3d40; }
-  /* line 1490, ../sass/bbf-style.scss */
+  /* line 1491, ../sass/bbf-style.scss */
   .discount-info-tt p {
     color: #ffffff;
     font-size: 1.5em; }
-  /* line 1494, ../sass/bbf-style.scss */
+  /* line 1495, ../sass/bbf-style.scss */
   .discount-info-tt b, .discount-info-tt em {
     margin-left: 48px;
     font-size: 2em; }
 
-/* line 1500, ../sass/bbf-style.scss */
+/* line 1501, ../sass/bbf-style.scss */
 .discount-info-con-tt {
   margin-top: 24px;
   width: 60%;
@@ -1434,7 +1435,7 @@ input:-moz-placeholder {
   text-indent: 1em;
   background-color: #ed4985; }
 
-/* line 1510, ../sass/bbf-style.scss */
+/* line 1511, ../sass/bbf-style.scss */
 .discount-info-btn {
   margin: 20px auto;
   width: 60%;
@@ -1446,35 +1447,44 @@ input:-moz-placeholder {
   border-radius: 30px;
   display: block; }
 
-/* line 1522, ../sass/bbf-style.scss */
+/* line 1523, ../sass/bbf-style.scss */
 .register5 {
   padding-bottom: 60px;
   margin-top: 32px; }
-  /* line 1525, ../sass/bbf-style.scss */
+  /* line 1526, ../sass/bbf-style.scss */
   .register5 .register-input {
     margin: 12px 0; }
-  /* line 1528, ../sass/bbf-style.scss */
+  /* line 1529, ../sass/bbf-style.scss */
   .register5 .register-phone-btn {
     margin-top: 32px; }
 
-/* line 1532, ../sass/bbf-style.scss */
+/* line 1533, ../sass/bbf-style.scss */
 .zhekoujkia {
   padding-left: 10px;
   color: #ffffff; }
 
-/* line 1538, ../sass/bbf-style.scss */
+/* line 1539, ../sass/bbf-style.scss */
 .pay-final .count {
   width: 77%; }
-/* line 1541, ../sass/bbf-style.scss */
+/* line 1542, ../sass/bbf-style.scss */
 .pay-final .count-left {
   width: 100%; }
-/* line 1544, ../sass/bbf-style.scss */
+/* line 1545, ../sass/bbf-style.scss */
 .pay-final .count-left-item-number {
   float: right;
   margin: 0; }
 
-/* line 1549, ../sass/bbf-style.scss */
+/* line 1550, ../sass/bbf-style.scss */
 .login-pic {
   margin-left: 28px; }
+
+/* line 1553, ../sass/bbf-style.scss */
+.discount-info-foot {
+  position: fixed;
+  bottom: 0; }
+
+/* line 1557, ../sass/bbf-style.scss */
+.pdb95 {
+  padding-bottom: 95px; }
 
 /*@ sourceMappingURL=bbf-style.css.map */
