--- a/sass/bbf-style.scss
+++ b/sass/bbf-style.scss
@@ -1351,7 +1351,8 @@ input:-moz-placeholder {
   //padding-top: 62px;
   @extend %wrap;
   h2{
-    padding: 30px 0;
+    height: 82px;
+    line-height: 82px;
     font-size: 2.2em;
     border-bottom: 1px solid $bds;
     color: #ffffff;
@@ -1383,7 +1384,7 @@ input:-moz-placeholder {
   //padding: 60px 0;
   li{
     position: relative;
-    padding: 48px 5% 16px;
+    padding: 44px 5% 16px;
     border-bottom: 1px solid $bds;
     overflow: hidden;
     h2 {
@@ -1548,4 +1549,11 @@ input:-moz-placeholder {
 }
 .login-pic{
   margin-left: 28px;
+}
+.discount-info-foot{
+  position: fixed;
+  bottom: 0;
+}
+.pdb95{
+  padding-bottom: 95px;
 }
